# sci

src/: Makefile  dir.lst  opt.lst
src/amg/: Makefile
src/amg/sci/cxx/: Makfile  amg_sci_ctl.cxx  amg_sci_ctl.hxx  sci_ctl.cxx  sci_ctl.def  sci_ctl.hxx  sci_ctl.tpl
src/amg/std/cxx/: cxx_base.def  cxx_ctl.cxx  cxx_ctl.def  cxx_ctl.hxx  cxx_ctl.tpl  cxx_ctl_def.tpl  cxx_ctl_tpl.tpl  cxx_licence.cxx  cxx_licence.def
src/manage/autotools/: Makefile.am  configure.ac
src/sci/: Makefile  file.lst  sci_base.hxx  sci_ctl.cxx  sci_ctl.hxx  sci_modulectl.cxx  sci_modulectl.hxx
src/sci/base/: Makefile  base_ctl.cxx  base_ctl.hxx  file.lst
src/sci/subj/: Makefile  file.lst  subj_base.hxx  subj_ctl.cxx  subj_ctl.hxx
src/sci/subj/atr/: Makefile  atr_base.hxx  atr_ctl.cxx  atr_ctl.hxx  file.lst
src/sci/subj/atr/earth/: Makefile  earth_base.hxx  earth_coordctl.cxx  earth_coordctl.hxx  earth_ctl.cxx  earth_ctl.hxx  earth_tidebasic.cxx  earth_tidebasic.hxx  earth_tidectl.cxx  earth_tidectl.hxx  earth_tidegravity.cxx  earth_tidegravity.hxx  earth_tidetilt.cxx  earth_tidetilt.hxx  earth_timectl.cxx  earth_timectl.hxx  earth_typectl.cxx  earth_typectl.hxx  file.lst
src/sci/subj/phy/: Makefile  file.lst  phy_base.hxx  phy_ctl.cxx  phy_ctl.hxx
src/sci/subj/phy/mechanics/: Makefile  file.lst  mcn_base.hxx  mcn_ctl.cxx  mcn_ctl.hxx  mcn_gravityctl.cxx  mcn_gravityctl.hxx
src/test/cpp/: Makefile  file.lst  test_earth.cxx  test_earth.hxx
